syntax = "proto3";

package bootnode;

message QueryNodeAddressRequest {
    uint64 version = 1;
    bytes operator_public_key = 2;
}

message QueryNodeAddressResponse {
    bytes address = 1;
}

service Bootnode {
    rpc QueryNodeAddress(QueryNodeAddressRequest) returns(QueryNodeAddressResponse) {}
}